maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:20: error: Unmatched closing brace '}' ignored here
}
^Escaper:23: error: expected class or object definition
def keepHandOnSideWall(){
^Escaper:42: error: expected class or object definition
def Nord(){
^Escaper:63: error: Unmatched closing brace '}' ignored here
} 
^Escaper:65: error: eof expected but '}' found.
}
^